<resources>
    <string name="app_name">RapidTweak App</string>

    <string name="login">Login</string>
    <string name="set_server">Settings</string>
    <string name="track">Track</string>
    <string name="track_elements">Track Elements</string>
    <string name="config">Config</string>
    <string name="logger">Logger</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="state">Phase</string>
    <string name="title_activity_state">StateActivity</string>
</resources>
